changes so it can check multiple parts of the cpu usage in 1 go

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ check-cpu-usage
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# development
+.idea/
+
 # dep
 vendor/
 
