--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,8 +42,10 @@ builds:
       - darwin
     goarch:
       - amd64
+      - arm64
     targets:
       - darwin_amd64
+      - darwin_arm64
 
 checksum:
   name_template: "{{ .ProjectName }}_{{ .Version }}_sha512-checksums.txt"
